tests/errors/divizero.xen
# Test division by zero
spawn result: int = 10 / 0
echo(result)
